Fixed footer overlapping the content on the page on small windows

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -7,7 +7,9 @@ div.container {
     display: grid;
     grid-template-rows: auto auto 65vh auto;
     grid-gap: 1rem;
-    max-height: 100vh;
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 header {
